<resources>
    <string name="app_name">ParcelApp</string>
    <string name="hint_nombre">Nombre de la parcela ...</string>
    <string name="hint_descripcion">Descripcion de la parcela ...</string>
    <string name="button_save_parcela">Guardar Parcela</string>
    <string name="reserva_not_saved">Reserva no guardada porque no tiene el nombre del cliente</string>
    <string name="fecha_entrada_salida_error">La fecha de entrada debe ser anterior a la fecha de salida</string>
    <string name="parcela_not_saved">Parcela no guardada porque no tiene el nombre de la parcela</string>
    <string name="add_parcela">Añadir Parcela</string>
    <string name="menu_delete">Delete Note</string>
    <string name="menu_edit">Edit Note</string>
    <string name="nombre">Nombre de la parcela</string>
    <string name="descripcion">Descripción</string>
    <string name="maxOcupantes">Número máximo de ocupantes</string>
    <string name="precioPorPersona">Precio por persona</string>
    <string name="orden_parcelas">Ordenar por:</string>
    <string name="nomCliente">Nombre del cliente</string>
    <string name="tlfCliente">Teléfono del cliente</string>
    <string name="fEntrada">Fecha de entrada</string>
    <string name="fSalida">Fecha de salida</string>
    <string name="hint_nomCliente">Nombre y apellidos...</string>
    <string name="hint_tlfCliente">Teléfono...</string>
    <string name="hint_fecha">aaaa/mm/dd</string>
    <string name="button_save_reserva">Guardar Reserva</string>
    <string name="add_reserva">Añadir Reserva</string>
    <string name="parcelasReservadas">Añadir parcelas</string>
</resources>