<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:layout_margin="@dimen/big_padding"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_height"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_nombre"
            android:inputType="textAutoComplete"
            android:layout_margin="@dimen/big_padding"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:layout_margin="@dimen/big_padding"
        android:textSize="18sp" />
    <EditText android:id="@+id/descripcion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_descripcion"
        android:inputType="textAutoComplete"
        android:layout_margin="@dimen/big_padding"
        android:textSize="18sp" />

    <!-- Sección de Máximo de personas con tamaño reducido -->
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maxOcupantes"
        android:layout_margin="@dimen/big_padding"
        android:textSize="14sp" />
    <EditText android:id="@+id/maxOcupantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:inputType="number"
        android:textSize="14sp" />

    <!-- Sección de Precio por persona con tamaño reducido -->
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precioPorPersona"
        android:layout_margin="@dimen/big_padding"
        android:textSize="14sp" />
    <EditText android:id="@+id/precioPorPersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:inputType="numberDecimal"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/button_save_parcela"
        android:layout_margin="@dimen/big_padding"
        android:textColor="@color/buttonLabel" />

</LinearLayout>
