<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomCliente"
        android:layout_margin="@dimen/small_padding"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/nomCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_nomCliente"
        android:inputType="textAutoComplete"
        android:minHeight="@dimen/min_height"
        android:textSize="14sp"
        android:paddingLeft="@dimen/small_padding"
        android:background="@drawable/edittext_background"/>


    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tlfCliente"
        android:layout_margin="@dimen/small_padding"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/tlfCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_tlfCliente"
        android:inputType="number"
        android:scrollbars="vertical"
        android:textSize="14sp"
        android:padding="@dimen/big_padding"
        android:background="@drawable/edittext_background"
        android:minLines="4" />


    <!-- Sección de Fechas de entrada y de salida con tamaño reducido -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:text="@string/fEntrada"
        android:textSize="12sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/fEntrada"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:fontFamily="sans-serif-light"
        android:inputType="textAutoComplete"
        android:textSize="14sp"
        android:padding="@dimen/small_padding"
        android:background="@drawable/edittext_background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:text="@string/fSalida"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/fSalida"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:background="@drawable/edittext_background"
        android:fontFamily="sans-serif-light"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:textSize="14sp" />


</LinearLayout>

</ScrollView>
    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/button_save_reserva"
        android:layout_alignParentBottom="true"
        android:textColor="@color/buttonLabel"
        android:layout_margin="@dimen/small_padding" />

</RelativeLayout>